# namozvaqti-linux

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
namozvaqti/: __main__.py  background.py  cache.py  fetch.py  format.py  logic.py  notify.py  parse.py  scheduler.py  service.py  time_utils.py  transform.py
namozvaqti/scripts/: test_cache.py  test_logic.py  test_notify.py  test_parse.py  test_waybar.py
src/namozvaqti/: fetch.py
